Adjusts on all DAOImpl methods, app.create updated